SDK-314 SDK-325 SDK-326 #comment Revised container-mode implementation SDK-328 #comment Fixed error handling on instruction parsing